# comply-ai

./: .cursorignore  .dockerignore  .env.api_keys  .env.example  .gitignore  .pre-commit-config.yaml  =4.36.0  API_CLIENT_IMPROVEMENTS.md  APPLICATION_OVERVIEW.md  AZURE_BACKUP_RESTORE_INTEGRATION_SUMMARY.md  CLI_API_INTEGRATION_SUMMARY.md  CLI_REFACTORING_SUMMARY.md  CORS_SECURITY_GUIDE.md  COST_MONITORING_ARCHITECTURE_COMPLIANCE.md  COST_MONITORING_IMPLEMENTATION_SUMMARY.md  DATABASE_BACKUP_RESTORE_IMPLEMENTATION_SUMMARY.md  DEMO_GUIDE.md  DEMO_VALIDATION_SUMMARY.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  FINE_TUNING_PREPARATION_GUIDE.md  FINE_TUNING_READY.md  GRAFANA_DASHBOARD_QUICK_WINS.md  IMPLEMENTATION_SUMMARY.md  INVESTOR_DEMO.md  MAPPER_TECH_CHARTER.md  MICROSERVICES_README.md  MICROSERVICE_COHESION_ANALYSIS.md  PROMETHEUS_SETUP_GUIDE.md  QUICK_DEMO.md  README.md  README_MICROSERVICE_MIGRATION.md  START_SERVICES_GUIDE.md  WARP.md  WEEKLY_EVALUATION_IMPLEMENTATION_SUMMARY.md  api_keys.json  benchmark_demo.py  browser_testable_endpoints.md  config.yaml  demo_server.py  (+30 more)
detector-orchestration/: Dockerfile  MONITORING.md  README.md  REFACTORING_SUMMARY.md  cli.py  deployment.yaml  docker-compose.dev.yaml  docker-compose.yml  grafana-dashboard.json  openapi.yaml  prometheus-rules.yaml  pyproject.toml  servicemonitor.yaml  setup_shared.py
detector-orchestration/charts/detector-orchestration/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
detector-orchestration/charts/detector-orchestration/templates/: _helpers.tpl  configmap-policies.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  opa-deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
detector-orchestration/config/: mapping_rules_piiranha.json  settings.yaml
detector-orchestration/database/: migrations.py  schema.sql
detector-orchestration/database/migrations/: 004_detector_registry.sql  005_tenant_policies.sql  006_risk_analysis_results.sql  007_detector_mapping_configs.sql
detector-orchestration/docs/: openapi.yaml
detector-orchestration/policies/: compliance_check.rego  conflict_resolution.rego  detector_selection.rego  eu_ai_act_compliance.rego  pii_detection.rego  security_validation.rego  tenant_policies_data.json
detector-orchestration/src/detector_orchestration/: __init__.py  aggregator.py  cache.py  circuit_breaker.py  cli.py  clients.py  config.py  conflict.py  content_analysis.py  coordinator.py  errors.py  health_monitor.py  jobs.py  mapper_client.py  metrics.py  models.py  policy.py  rate_limit.py  registry.py  router.py  security.py  taxonomy_hints.py
detector-orchestration/src/detector_orchestration/api/: main.py
detector-orchestration/src/detector_orchestration/service_discovery/: __init__.py  client.py  config_reloader.py  detector_manager.py  health_reporter.py
detector-orchestration/src/detector_orchestration/service_factory/: __init__.py  app_builder.py  components.py  container.py  events.py  factory.py  pipeline.py
detector-orchestration/src/orchestration/: __init__.py  app_state.py  main.py  service.py  shared_integration.py
detector-orchestration/src/orchestration/api/: __init__.py  dependencies.py  detector_api.py  health_api.py  orchestration_api.py  utils.py
detector-orchestration/src/orchestration/cli/: __init__.py  detector_commands.py  health_commands.py  main.py  mapping_commands.py  policy_commands.py
detector-orchestration/src/orchestration/config/: __init__.py  mapping_schemas.py  settings.py
detector-orchestration/src/orchestration/core/: __init__.py  aggregator.py  coordinator.py  detector_client.py  models.py  router.py
detector-orchestration/src/orchestration/discovery/: __init__.py  service_discovery.py
detector-orchestration/src/orchestration/ml/: __init__.py  content_analyzer.py  feedback_service.py  load_balancer.py  performance_predictor.py  risk_scorer.py  routing_optimizer.py
detector-orchestration/src/orchestration/monitoring/: __init__.py  health_monitor.py  prometheus_metrics.py
detector-orchestration/src/orchestration/pipelines/: __init__.py  async_job_processor.py
detector-orchestration/src/orchestration/plugins/: __init__.py  base.py  detector_plugin.py  plugin_manager.py  policy_plugin.py
detector-orchestration/src/orchestration/policy/: __init__.py  evaluator.py  file_loader.py  initialization.py  metadata.py  models.py  opa_adapter.py  parser.py  policy_loader.py  policy_manager.py  repository.py  violations.py
detector-orchestration/src/orchestration/repository/: __init__.py  detector_mapping_repository.py  detector_repository.py  risk_repository.py
detector-orchestration/src/orchestration/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py
detector-orchestration/src/orchestration/security/: __init__.py
detector-orchestration/src/orchestration/security/auth/: __init__.py  api_key_manager.py
detector-orchestration/src/orchestration/service/: __init__.py  initialization.py  lifecycle.py  models.py  orchestration_service.py  pipeline.py  registration.py  security.py
detector-orchestration/src/orchestration/services/: __init__.py  orchestration_service.py
detector-orchestration/src/orchestration/tenancy/: __init__.py  tenant_isolation.py  tenant_manager.py
detector-orchestration/src/orchestration/utils/: detector_response.py  registry.py
detector-orchestration/tests/: __init__.py  conftest.py
detector-orchestration/tests/fixtures/: conflict_scenarios.json  opa_decisions.json  test_data.py
detector-orchestration/tests/integration/: test_health_monitoring_failover.py  test_orchestration_end_to_end.py  test_orchestration_simple.py  test_rate_limiting_orchestration.py
detector-orchestration/tests/unit/: test_aggregator.py  test_cache.py  test_circuit_breaker.py  test_config.py  test_coordinator.py  test_errors.py  test_health_monitor.py  test_metrics.py  test_models.py  test_policy.py  test_router.py
detector-orchestration/tests/unit/helpers/: factories.py
docs/: slo.md  (+15 more)
mapper-service/src/mapper/shared_lib/: pyproject.toml
(+1214 files in other folders)
