[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-mapper"
version = "0.1.0"
description = "Fine-tuned Llama model for mapping detector outputs to canonical taxonomy"
authors = [{name = "AI Safety Team", email = "dawansawyer@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "peft>=0.7.0",
    "datasets>=2.15.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "vllm>=0.2.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "colorama>=0.4.6",
    "click>=8.1.0",
    "httpx>=0.25.0",
    # Storage dependencies
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "asyncpg>=0.29.0",
    "clickhouse-driver>=0.2.6",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
mapper = "llama_mapper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true